--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <footer>
             <div class="container">
                 <center>
-                    <p>Copyright © Lifestyle Store. All Rights Reserved | Contact Us: +91 90000 00000</p>
+                    <p>Copyright © Lifestyle Store. All Rights Reserved | Simran Suri</p>
                 </center>
             </div>
         </footer>
