--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
          <footer>
             <div class="container">
                 <center>
-                    <p>Copyright © Lifestyle Store. All Rights Reserved | Simran Suri</p>
+                    <p>Copyright © Lifestyle Store | Simran Suri</p>
                 </center>
             </div>
         </footer>
